--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -3,9 +3,13 @@
 }
 
 .hw {
-
+    border-top: 1px solid #d9d9d9;
+    border-bottom: 1px solid #d9d9d9;
+    padding: 24px 70px 32px 70px;
 }
 
 .hwTitle {
-
+    padding: 10px 70px;
+    font-size: 22px;
+    font-weight: 600;
 }
